syntax = "proto3";

package meteora.common;

enum State {
    OK = 0;
    WRONG_LEADER = 1;
    NOT_FOUND = 2;
    IO_ERROR = 3;
}

message Null {}
